--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "scripts": {
-  },
+  "scripts": {},
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -13,10 +12,11 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.11.5"
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11"
   },
   "dependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6"
+    "@babel/polyfill": "^7.12.1"
   }
 }
